--- a/auto_examples/statistics/plot_sensor_cluster_stats_eeg_channel.html
+++ b/auto_examples/statistics/plot_sensor_cluster_stats_eeg_channel.html
@@ -147,7 +147,7 @@ on the contrast faces vs. scrambled.</p>
 
 <span class="n">channel</span> <span class="o">=</span> <span class="s1">&#39;EEG065&#39;</span>
 <span class="n">idx</span> <span class="o">=</span> <span class="n">contrast</span><span class="o">.</span><span class="n">ch_names</span><span class="o">.</span><span class="n">index</span><span class="p">(</span><span class="n">channel</span><span class="p">)</span>
-<a href="https://mne-tools.github.io/dev/generated/mne.viz.plot_compare_evokeds.html#mne.viz.plot_compare_evokeds" title="View documentation for mne.viz.plot_compare_evokeds"><span class="n">mne</span><span class="o">.</span><span class="n">viz</span><span class="o">.</span><span class="n">plot_compare_evokeds</span></a><span class="p">(</span><span class="n">contrast</span><span class="p">,</span> <span class="p">[</span><span class="n">idx</span><span class="p">])</span>
+<a href="https://mne-tools.github.io/dev/generated/mne.viz.plot_compare_evokeds.html#mne.viz.plot_compare_evokeds" title="View documentation for mne.viz.plot_compare_evokeds"><span class="n">mne</span><span class="o">.</span><span class="n">viz</span><span class="o">.</span><span class="n">plot_compare_evokeds</span></a><span class="p">(</span><span class="n">contrast</span><span class="p">,</span> <span class="p">[</span><span class="n">idx</span><span class="p">],</span> <span class="n">show_sensors</span><span class="o">=</span><span class="mi">4</span><span class="p">)</span>
 </pre></div>
 </div>
 <img alt="../../_images/sphx_glr_plot_sensor_cluster_stats_eeg_channel_001.png" class="align-center" src="../../_images/sphx_glr_plot_sensor_cluster_stats_eeg_channel_001.png" />
@@ -239,7 +239,7 @@ on the contrast faces vs. scrambled.</p>
 </pre></div>
 </div>
 <img alt="../../_images/sphx_glr_plot_sensor_cluster_stats_eeg_channel_002.png" class="align-center" src="../../_images/sphx_glr_plot_sensor_cluster_stats_eeg_channel_002.png" />
-<p><strong>Total running time of the script:</strong> ( 0 minutes  6.120 seconds)</p>
+<p><strong>Total running time of the script:</strong> ( 0 minutes  6.213 seconds)</p>
 <div class="sphx-glr-footer docutils container">
 <div class="sphx-glr-download docutils container">
 <a class="reference download internal" href="../../_downloads/plot_sensor_cluster_stats_eeg_channel.py" download=""><code class="xref download docutils literal"><span class="pre">Download</span> <span class="pre">Python</span> <span class="pre">source</span> <span class="pre">code:</span> <span class="pre">plot_sensor_cluster_stats_eeg_channel.py</span></code></a></div>
